...
    }
  }

  @override
  Widget build(BuildContext context) {
    return PopupMenuButton<AppBarMenuOption>(
      key: Key("Navegación"),
      tooltip: 'Navegación',
      onSelected: (item) => _onSelected(context, item),
      icon: CircleAvatar(
        radius: 27,
        backgroundColor: const Color(0xFF0A0E1A),
        child: ClipOval(
...
            errorBuilder: (_, __, ___) => const Icon(Icons.person, color: Colors.white),
          ),
        ),
      ),
      itemBuilder: (_) => [
        const PopupMenuItem(
          key: Key("Ver mi perfil"),
          value: AppBarMenuOption.verPerfil,
          child: Row(
            children: [
              Icon(Icons.person_2_outlined, color: Colors.blue),
              SizedBox(width: 8),
              Text('Ver mi perfil'),
...
