...
              color: _subtitleColor,
              fontSize: 14,
            ),
          ),
          const SizedBox(height: 20),
          TextField(
            key: Key('BuscarAmigo'),
            controller: _searchController,
            onSubmitted: (_) => _buscarYagregar(context), 
            style: const TextStyle(color: _primaryTextColor),
            decoration: InputDecoration(
              hintText: 'Ejemplo: NickAmigote123',
              hintStyle: const TextStyle(color: _textoEditable),
              prefixIcon: const Icon(Icons.person_search_outlined, color: _subtitleColor),
              suffixIcon: IconButton(
                key: Key('Buscar'),
                icon: const Icon(Icons.search, color: _subtitleColor),
                onPressed: () => _buscarYagregar(context), 
                tooltip: 'Buscar',
              ),
              fillColor: _inputBackgroundColor,
              filled: true,
...
